<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="action_sign_in_short">Registro</string>
    <string name="email">Correo electrónico</string>
    <string name="minimum_password">Contraseña corta, introduzca mínimo 6 caracteres!</string>
    <string name="auth_failed">Fallo de autenticación, cheque su email y contraseña o inicie sesión</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="send_password_reset_email">Enviar contraseña restablecer correo electrónico</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">No eres miembro? Regístrese en firebase ahora!</string>
    <string name="btn_link_to_login">Ya registrado. Iniciar Sesión!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Olvidó su contraseña?</string>
    <string name="btn_reset_password">Restablecer la contraseña</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambio</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Retirar</string>
    <string name="btn_sign_out">Desconectar</string>
    <string name="lbl_forgot_password">Se te olvidó tu contraseña?</string>
    <string name="forgot_password_msg">Solo necesitamos su ID de correo electrónico registrado para enviarle las instrucciones para restablecer su contraseña.</string>
    <string name="prompt_password"></string>
    <string name= "appbar_scrolling_view_behavior"></string>
</resources>



















